[gd_scene load_steps=28 format=2]

[ext_resource path="res://Enemy/Slime.gd" type="Script" id=1]
[ext_resource path="res://Enemy/slime.png" type="Texture" id=2]
[ext_resource path="res://Overlap/Hitbox.tscn" type="PackedScene" id=3]
[ext_resource path="res://Stats.tscn" type="PackedScene" id=4]
[ext_resource path="res://Overlap/HurtBox.tscn" type="PackedScene" id=5]
[ext_resource path="res://Enemy/PlayerDetectionZone.tscn" type="PackedScene" id=6]

[sub_resource type="Animation" id=1]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 1 ]
}

[sub_resource type="Animation" id=2]
resource_name = "run"
length = 0.8
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 2, 3, 4, 5, 6, 7 ]
}

[sub_resource type="Animation" id=3]
resource_name = "wander"
length = 0.5
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2, 0.4 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 2 ]
}

[sub_resource type="AnimationNodeAnimation" id=4]
animation = "run"

[sub_resource type="AnimationNodeAnimation" id=5]
animation = "run"

[sub_resource type="AnimationNodeAnimation" id=6]
animation = "run"

[sub_resource type="AnimationNodeAnimation" id=7]
animation = "run"

[sub_resource type="AnimationNodeBlendSpace2D" id=8]
blend_point_0/node = SubResource( 4 )
blend_point_0/pos = Vector2( -1, 0 )
blend_point_1/node = SubResource( 5 )
blend_point_1/pos = Vector2( 0, 1.1 )
blend_point_2/node = SubResource( 6 )
blend_point_2/pos = Vector2( 1, 0 )
blend_point_3/node = SubResource( 7 )
blend_point_3/pos = Vector2( 0, -1 )
min_space = Vector2( -1, -1.1 )
max_space = Vector2( 1, 1.1 )
blend_mode = 1

[sub_resource type="AnimationNodeAnimation" id=9]
animation = "wander"

[sub_resource type="AnimationNodeAnimation" id=10]
animation = "wander"

[sub_resource type="AnimationNodeAnimation" id=11]
animation = "wander"

[sub_resource type="AnimationNodeAnimation" id=12]
animation = "wander"

[sub_resource type="AnimationNodeBlendSpace2D" id=13]
blend_point_0/node = SubResource( 9 )
blend_point_0/pos = Vector2( -1, 0 )
blend_point_1/node = SubResource( 10 )
blend_point_1/pos = Vector2( 0, 1.1 )
blend_point_2/node = SubResource( 11 )
blend_point_2/pos = Vector2( 1, 0 )
blend_point_3/node = SubResource( 12 )
blend_point_3/pos = Vector2( 0, -1 )
min_space = Vector2( -1, -1.1 )
max_space = Vector2( 1, 1.1 )
blend_mode = 1

[sub_resource type="AnimationNodeStateMachineTransition" id=14]

[sub_resource type="AnimationNodeStateMachineTransition" id=15]

[sub_resource type="AnimationNodeStateMachine" id=16]
states/Chase/node = SubResource( 8 )
states/Chase/position = Vector2( 584, 68 )
states/Wander/node = SubResource( 13 )
states/Wander/position = Vector2( 375, 71 )
transitions = [ "Wander", "Chase", SubResource( 14 ), "Chase", "Wander", SubResource( 15 ) ]
start_node = "Wander"

[sub_resource type="AnimationNodeStateMachinePlayback" id=17]

[sub_resource type="CircleShape2D" id=18]

[sub_resource type="CircleShape2D" id=19]

[sub_resource type="CircleShape2D" id=20]
radius = 9.48683

[sub_resource type="CircleShape2D" id=21]
radius = 78.3135

[node name="Slime" type="KinematicBody2D"]
collision_layer = 9
script = ExtResource( 1 )

[node name="Sprite" type="Sprite" parent="."]
texture = ExtResource( 2 )
hframes = 8
frame = 1

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
root_node = NodePath("../Sprite")
anims/RESET = SubResource( 1 )
anims/run = SubResource( 2 )
anims/wander = SubResource( 3 )

[node name="AnimationTree" type="AnimationTree" parent="."]
tree_root = SubResource( 16 )
anim_player = NodePath("../AnimationPlayer")
parameters/playback = SubResource( 17 )
parameters/Chase/blend_position = Vector2( 0, 0 )
parameters/Wander/blend_position = Vector2( 0, 0 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 0, 3 )
shape = SubResource( 18 )

[node name="HurtBox" parent="." instance=ExtResource( 5 )]
collision_layer = 8
collision_mask = 0

[node name="CollisionShape2D" parent="HurtBox" index="0"]
position = Vector2( 0, 3 )
shape = SubResource( 19 )

[node name="Hitbox" parent="." instance=ExtResource( 3 )]
collision_layer = 0
collision_mask = 4

[node name="CollisionShape2D" parent="Hitbox" index="0"]
position = Vector2( 0, 3 )
shape = SubResource( 20 )

[node name="PlayerDetectionZone" parent="." instance=ExtResource( 6 )]
modulate = Color( 1, 1, 1, 0.376471 )

[node name="CollisionShape2D" parent="PlayerDetectionZone" index="0"]
shape = SubResource( 21 )

[node name="Stats" parent="." instance=ExtResource( 4 )]
max_health = 3

[connection signal="area_entered" from="HurtBox" to="." method="_on_HurtBox_area_entered"]
[connection signal="no_health" from="Stats" to="." method="_on_Stats_no_health"]

[editable path="HurtBox"]
[editable path="Hitbox"]
[editable path="PlayerDetectionZone"]
